--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@
     }
 
 body {
-    width: 100%;
+    /*width: 100%;*/
     margin: 0;
     font-size: 16px;
     font-family: 'Be Vietnam';
@@ -83,8 +83,9 @@ header {
     list-style:none;
 }
 
-.header_checkbox {
-    opacity: 0.5;
+#header_checkbox {
+    opacity: 0;
+    display:none;
 }
 
 .link_items {
@@ -307,6 +308,17 @@ footer > div {
     width: 35%;
 }
 
+.footer_links_container {
+    background-color: hsl(233, 12%, 13%);
+    
+    
+}
+
+.footer_links {
+    display: flex;
+    justify-content: space-between;
+}
+
 .footer_link_items {
     margin-bottom: 1rem;
 }
@@ -335,7 +347,18 @@ footer > div {
     .social_media_icons:hover {
     }
 
-@media only screen and (max-width:375px) {
+.label_copyright {
+    color: white;
+    font-size: small;
+    float: right;
+}
+
+
+
+
+@media only screen and (max-width:768px) {
+
+
 
     header > .btn_rounded {
         display: none;
@@ -365,21 +388,36 @@ footer > div {
 
 
     #header_links {
-        display: none;
+        visibility: hidden;
         padding: 2rem 2rem;
         width: 70%;
         background-color: white;
         border-radius: 0.2rem;
         position: absolute;
-        top: 2rem;
+        top: 5rem;
         flex-direction: column;
         align-items: center;
-        box-shadow: 1rem 1rem 20rem grey;
+        box-shadow: 1rem 1rem 80rem 2rem grey;
+        transition: all 0.3s ease;
+        opacity:0;
     }
 
-    input.header_checkbox:checked ~ ul#header_links {
-        display: flex !important;
-    }
+        #header_links > .link_items {
+            margin: 0.5rem 0;
+        }
+
+        #header_links > .link_items > a {
+            color: hsl(228, 39%, 23%);
+            font-size: 1rem;
+            font-weight: 900;
+            padding: 0.5rem 0;
+        }
+
+        #header_checkbox:checked ~ #header_links {
+            display: flex;
+            visibility: visible;
+            opacity: 1;
+        }
 
     .intro_container {
         text-align: center;
@@ -423,11 +461,10 @@ footer > div {
 
         footer > div {
             padding: 6rem 1rem;
+            overflow-x: hidden;
         }
 
-    .footer_links {
-        flex-direction: column-reverse;
-    }
+    
 
     .background_pattern_top_cta {
         display: none;
@@ -446,4 +483,30 @@ footer > div {
         width: 100%;
         margin-bottom: 1rem;
     }
+
+    .social_media_links {
+        display:flex;
+        justify-content:space-around;
+        padding: 1rem 0;
+    }
+
+    .footer_links_container {
+        display: flex;
+        flex-direction:column;
+        align-items: center;
+    }
+
+    .footer_links {
+        flex-direction: column-reverse;
+        align-items:center;
+        justify-content: space-around;
+    }
+
+        .footer_links > div {
+            margin: 1rem 0;
+        }
+
+        .label_copyright {
+            float: none;
+        }
 }
