--- a/style.css
+++ b/style.css
@@ -88,6 +88,14 @@ header {
     display:none;
 }
 
+#label_header_checkbox {
+    visibility: hidden;
+    cursor: pointer;
+    background-image: url(images/icon-hamburger.svg);
+    height: 1.1rem;
+    width: 1.5rem;
+}
+
 .link_items {
     cursor: pointer;
 }
@@ -358,8 +366,10 @@ footer > div {
 
 @media only screen and (max-width:768px) {
 
-
-
+    body {
+        overflow-x: hidden;
+    }
+    
     header > .btn_rounded {
         display: none;
     }
@@ -386,6 +396,9 @@ footer > div {
         object-position: -15rem 5rem;
     }
 
+    #label_header_checkbox {
+        visibility:visible;
+    }
 
     #header_links {
         visibility: hidden;
@@ -413,11 +426,17 @@ footer > div {
             padding: 0.5rem 0;
         }
 
-        #header_checkbox:checked ~ #header_links {
-            display: flex;
-            visibility: visible;
-            opacity: 1;
-        }
+    #header_checkbox:checked ~ #header_links {
+        display: flex;
+        visibility: visible;
+        opacity: 1;
+    }
+
+    #header_checkbox:checked ~ #label_header_checkbox {
+        background-image: url(images/icon-close.svg);
+        height: 1.4rem;
+        width: 1.3rem;  
+    }
 
     .intro_container {
         text-align: center;
